--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-An extension dedicated to simplifying the fetch( content, list ) choree
-=======================================================================
+An extension dedicated to simplifying the fetch( content, list ) chore
+======================================================================
 
 Planning stage, discussion happening so far at http://share.ez.no/forums/discussions/little-nemo-in-slumbercode-part-1-can-jquery-meet-the-ez-template-languag
 
